# LazyOwnBT

./: .env.example  CLAUDE.md  README.md  app.py  blue_team.db  config.json  lazyown.db  lazysentinel.db  main.py  pyproject.toml  requirements.txt
lazyownbt/: __init__.py  actions.py  audit.py  config.py  handlers.py  security.py  web.py
sessions/ai_model/: README.md  malicious_command_model.pkl  tfidf_vectorizer.pkl
skills/: lazyownbt_mcp.py  mcp_config.json
specs/: README.md  configuration.md  operations.md  security.md
static/css/: dashboard.css
static/js/: auth.js  commands.js  table-filter.js
templates/: alerts.html  commands.html  dashboard.html  events.html  login.html
tests/: conftest.py  test_command_execution.py  test_command_execution_bdd.py  test_configuration.py  test_configuration_bdd.py  test_production.py  test_production_bdd.py  test_secrets_bdd.py  test_security.py
tests/features/: command_execution.feature  configuration.feature  production_readiness.feature  secrets.feature
